<resources>
    //NAME APP
    <string name="app_name">Reto_Final</string>
    <string name="elorrchat" translatable="false">ElorrChat</string>

    //TITLE-ACTIVITIES
    <string name="cambio_de_contrase_a">Cambio de Contraseña</string>
    <string name="configuraci_n_de_usuario">Perfil - Personal</string>
    <string name="perfil_escolar">Perfil - Escolar</string>

    //DESCRIPTION LOGOS
    <string name="logo_inicial">Logo Inicial</string>
    <string name="logo_elorrchat">Logo ElorrChat</string>
    <string name="logo_simplificado">logo simplificado</string>
    <string name="imagen_perfil">Imgaen de Perfil</string>

    //EDIT-TEXT
    <string name="contrase_a_actual">Contraseña Actual</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="name">Nombre*</string>
    <string name="apellido">Apellido*</string>
    <string name="tel_fono_m_vil">Teléfono Móvil*</string>
    <string name="tel_fono_fijo">Teléfono Fijo</string>
    <string name="dni">DNI*</string>
    <string name="direcci_n">Dirección*</string>
    <string name="curso">Curso</string>
    <string name="fct_dual">FCT-DUAL</string>
    <string name="ciclo">Ciclo</string>
    <string name="email">Correo</string>
    <string name="nombre_del_grupo">Nombre del Grupo</string>
    <string name="lista_de_ciclos">Lista de módulos</string>
    <string name="grupo_privado">Grupo Privado</string>
    <string name="crear_grupo">Crear Grupo</string>
    <string name="mensaje">Mensaje</string>
    <string name="informaci_n_del_grupo">Información del Grupo</string>
    <string name="a_adir_usuario">Añadir Usuario</string>
    <string name="abandonar_grupo">Abandonar Grupo</string>
    <string name="eliminar_grupo">Eliminar Grupo</string>
    <string name="filter">Filtrar</string>
    <string name="privado">Privado</string>
    <string name="p_blico">Público</string>
    <string name="todos">Todos</string>
    <string name="ocultar">Ocultar</string>
    <string name="email_forgot">Correo electrónico*</string>
    <string name="insert_email">Introduce tu correo electrónico</string>
    <string name="take_picture">Tomar foto</string>
    <string name="get_picture">Elegir foto de la galería</string>
    <string name="choose">Elige una opción</string>
    <string name="are_you_sure">¿Seguro que deseas continuar?</string>
    <string name="will_lose_info">Se perderán las modificaciones realizadas</string>

    //BUTTONS
    <string name="siguiente">Siguiente</string>
    <string name="volver">Volver</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="login">Iniciar Sesión</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="perfil">Perfil</string>
    <string name="forgot">He olvidado la contraseña</string>

    //CHECK-BOXS
    <string name="rememberMe">Recuérdame</string>

    //TEXT-VIEWS
    <string name="paso_1_3">Paso 1 de 3</string>
    <string name="paso_2_3">Paso 2 de 3</string>
    <string name="paso_3_3">Paso 3 de 3</string>

    <string name="paso_1_2">Paso 1 de 2</string>
    <string name="paso_2_2">Paso 2 de 2</string>

    <string name="code">Código</string>
    <string name="name_Module">Nombre</string>
    <string name="download_pdf">Descargar PDF</string>

    //TOAST
    <string name="toast_edit_profile">A continuación, valide su Información</string>
    <string name="toast_empty_1">Ningún campo puede estar vacío</string>
    <string name="toast_format_email">El correo tiene un formato erróneo</string>
    <string name="toast_password_lenght">La contraseña debe tener al menos 8 caracteres</string>
    <string name="toast_empty_2">Hay campos obligatorios sin rellenar</string>
    <string name="toast_format_mobile_phone">El formato del teléfono móvil es erróneo</string>
    <string name="toast_format_landline_phone">El formato del teléfono fijo es erróneo</string>
    <string name="toast_format_DNI">El DNI debe tener el formato 00000000A</string>
    <string name="toast_password_default">La nueva contraseña es igual a la contraseña por defecto</string>
    <string name="toast_password_matches">Las dos contraseñas no coinciden</string>
    <string name="toast_password_old_new_matches">La anterior contraseña y la nueva son iguales</string>
    <string name="toast_success_changes">Cambios realizados con éxito</string>
    <string name="toast_success_password">Contraseña modificada con éxito</string>
    <string name="toast_error_login">Los datos introducidos no pertenecen a un usuario del centro</string>
    <string name="toast_error_generic">Ha habido algun error procesando la solicitud</string>
    <string name="toast_wait_process">Procesando la solicitud</string>
    <string name="toast_reset_email">Si el correo introducido es correcto, recibirás una nueva contraseña</string>
    <string name="toast_no_internet">Se necesita internet para realizar esta acción</string>
    <string name="toast_no_backend">El servidor está apagado</string>
    <string name="toast_loading_internet">Sin conexión, reintentando conexión...</string>
    <string name="toast_second_loading_internet">Sin conexión, acceso a funcionalidades limitadas</string>
    <string name="toast_success_add_user">Usuario añadido con éxito</string>
    <string name="toast_add_user">¿Quieres añadir a %1$s %2$s al grupo?</string>
    <string name="toast_no_camera">Este dispositivo no tiene cámara</string>
    <string name="toast_profile_error">No se ha podido actualizar el perfil</string>
    <string name="toast_permission_camera">Permiso de cámara denegado</string>
    <string name="toast_private_group">No puedes abandonar un grupo privado</string>
    <string name="toast_delete_group">El grupo ha sido eliminado con éxito</string>
    <string name="toast_delete_group_permission">No tienes permiso para eliminar el grupo</string>
    <string name="toast_leave_group">Has abandonado el grupo con éxito</string>
    <string name="toast_leave_group_admin">Eres el administrador, solo puedes eliminar el grupo</string>
    <string name="toast_no_logout">No se ha podido cerrar la sesión</string>
    <string name="toast_no_pass_update">No se ha podido actualizar la contraseña</string>
    <string name="toast_no_profile_update">No se ha podido actualizar el perfil</string>
    <string name="toast_no_permission_access">No tienes permiso para acceder al grupo</string>
    <string name="toast_no_permission_create">No tienes permisos para crear grupos privados</string>
    <string name="toast_delete_data">No se han podido borrar los datos locales del usuario</string>
    <string name="toast_no_local_file">No existe el archivo en local</string>
    <string name="toast_no_route">Error al obtener la ruta del PDF</string>
    <string name="toast_download">El PDF se ha descargado correctamente</string>
    <string name="toast_error_conversion">No se ha podido convertir el archivo</string>

    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="enter_group">¿Quieres entrar al grupo?</string>
    <string name="members_count">%1$s Miembro</string>
    <string name="members_count_plural">%1$s Miembros</string>
    <string name="confirm_expulsion_message">¿Seguro que quieres expulsar a %1$s %2$s del grupo?</string>
    <string name="group_created_message">El grupo %1$s ha sido creado.</string>

    <string name="start_socket">Iniciando socket</string>
    <string name="live_chat">Chat en directo</string>
    <string name="connected">Conectado</string>
    <string name="disconnected">Desconectado</string>
    <string name="user_joined_group_message">%1$s se ha unido al grupo</string>
    <string name="admin_added_user_message">%1$s ha añadido a %2$s.</string>
    <string name="user_left_group_message">%1$s ha salido del grupo.</string>
    <string name="admin_kicked_user_message">%1$s ha expulsado a %2$s.</string>
    <string name="add">Añadir</string>
    <string name="group_info">Informacion del Grupo</string>


</resources>