<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_song_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0D47A1"
        android:elevation="4dp"
        app:title=""
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways"
        tools:ignore="MissingConstraints" >

        <!-- Contenedor para el icono y el título -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <!-- Icono -->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="63dp"
                android:layout_height="61dp"
                app:srcCompat="@drawable/pruebalogo1_removebg_preview"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp"
                android:contentDescription="@string/logo_simplificado" />

            <TextView
                android:id="@+id/configuration_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/cambio_de_contrase_a"
                android:textColor="#ECE4E4"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,TextSizeCheck" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSuperior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a_actual"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/new_password1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineSuperior" />

    <EditText
        android:id="@+id/new_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nueva_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/new_password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password" />

    <EditText
        android:id="@+id/new_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/repetir_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guidelineInferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineInferior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0D47A1"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineInferior" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0D47A1"
        android:text="@string/cambiar_contrase_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/guidelineInferior" />


</androidx.constraintlayout.widget.ConstraintLayout>