<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_song_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0D47A1"
        android:elevation="4dp"
        app:title=" "
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways"
        tools:ignore="MissingConstraints" >

        <!-- Contenedor para el icono y el título -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <!-- Icono -->

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="63dp"
                android:layout_height="61dp"
                app:srcCompat="@drawable/pruebalogo1_removebg_preview"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/configuration_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/configuraci_n_de_usuario"
                android:textColor="#ECE4E4"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,TextSizeCheck" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="145dp"
        android:layout_height="138dp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_song_activity"
        app:srcCompat="@drawable/user1" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/apellido1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <EditText
        android:id="@+id/apellido1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/primer_apellido"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/apellido2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/apellido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/segundo_apellido"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido1" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/direcci_n"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/mobile_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido2" />

    <EditText
        android:id="@+id/mobile_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/tel_fono_m_vil"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/tel_fono_fijo"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/dni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_phone_number" />

    <EditText
        android:id="@+id/dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:editable="false"
        android:ems="10"
        android:hint="@string/dni"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp"
        android:textColorHint="#85736E6C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0D47A1"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dni" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0D47A1"
        android:text="@string/siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/dni" />

</androidx.constraintlayout.widget.ConstraintLayout>