<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_personal_configuration"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0D47A1"
        android:elevation="4dp"
        app:title=" "
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways"
        tools:ignore="MissingConstraints" >

        <!-- Contenedor para el icono y el título -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <!-- Icono -->

            <ImageView
                android:id="@+id/resumeLogo"
                android:layout_width="63dp"
                android:layout_height="61dp"
                app:srcCompat="@drawable/resume_logo"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp"
                android:contentDescription="@string/logo_simplificado" />

            <TextView
                android:id="@+id/configuration_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/elorrchat"
                android:textColor="#ECE4E4"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,TextSizeCheck" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_personal_configuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"/>

        <CheckBox
            android:id="@+id/checkBoxFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_type"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupList"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_personal_configuration" />

</androidx.constraintlayout.widget.ConstraintLayout>